changes a few tooltips (MINE-443)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -31,7 +31,7 @@ attributelink.Ace.Gene.*.primaryIdentifier.title=curated, comprehensive and non-
 attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
 
 attributelink.Aracyc.Gene.*.primaryIdentifier.url=http://pmn.plantcyc.org/ARA/substring-search?type=NIL&object=<<attributeValue>>
-attributelink.Aracyc.Gene.*.primaryIdentifier.title=biochemical pathway, catalytic enzyme, and compound information
+attributelink.Aracyc.Gene.*.primaryIdentifier.title=biochemical pathway, catalytic enzyme, and compound information integrated by Plant Metabolic Network
 attributelink.Aracyc.Gene.*.primaryIdentifier.text=Aracyc
 
 attributelink.Aramemnon.Gene.*.primaryIdentifier.url=http://aramemnon.botanik.uni-koeln.de/seq_view.ep?search=<<attributeValue>>
@@ -39,7 +39,7 @@ attributelink.Aramemnon.Gene.*.primaryIdentifier.title=protein description, topo
 attributelink.Aramemnon.Gene.*.primaryIdentifier.text=Aramemnon
 
 attributelink.AtcisDB.Gene.*.primaryIdentifier.url=http://arabidopsis.med.ohio-state.edu/AtcisDB/atcisview.html?id=<<attributeValue>>
-attributelink.AtcisDB.Gene.*.primaryIdentifier.title=binding sites information
+attributelink.AtcisDB.Gene.*.primaryIdentifier.title=Arabidopsis cis-regulatory element database with binding sites information
 attributelink.AtcisDB.Gene.*.primaryIdentifier.text=AtcisDB
 
 attributelink.AtGDB.Gene.*.primaryIdentifier.url=http://www.plantgdb.org/AtGDB-cgi/findRegion.pl?id=<<attributeValue>>
@@ -47,7 +47,7 @@ attributelink.AtGDB.Gene.*.primaryIdentifier.title=sequence data and custom EST 
 attributelink.AtGDB.Gene.*.primaryIdentifier.text=AtGDB
 
 attributelink.AthaMap.Gene.*.primaryIdentifier.url=http://www.athamap.de/search.php?accNo=<<attributeValue>>
-attributelink.AthaMap.Gene.*.primaryIdentifier.title=genome-wide map of potential transcription factor and small RNA binding sites
+attributelink.AthaMap.Gene.*.primaryIdentifier.title=genome-wide map of potential transcription factor and small RNA binding sites in Arabidopsis
 attributelink.AthaMap.Gene.*.primaryIdentifier.text=AthaMap
 
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.org/expviz/expviz.jsp?experiment=development&normalization=absolute&probesetcsv=<<attributeValue>>&action=Run
@@ -55,7 +55,7 @@ attributelink.AtGenExpress.Gene.*.primaryIdentifier.title=microarray data for sa
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 
 attributelink.ATTED.Gene.*.primaryIdentifier.url=http://atted.jp/data/locus/<<attributeValue>>.shtml
-attributelink.ATTED.Gene.*.primaryIdentifier.title=gene coexpression database
+attributelink.ATTED.Gene.*.primaryIdentifier.title=gene coexpression database based on microarray and coexpressed gene network
 attributelink.ATTED.Gene.*.primaryIdentifier.text=ATTED-II
 
 #attributelink.MIPS.Gene.*.primaryIdentifier.url=http://mips.helmholtz-muenchen.de/plant/athal/searchjsp/searchforge.jsp?searchText=<<attributeValue>>
@@ -74,7 +74,7 @@ attributelink.NCBIEntrez.Gene.*.primaryIdentifier.text=NCBI-Entrez
 attributelink.NCBIEntrez.Gene.*.primaryIdentifier.title=nomenclature, Reference Sequences (RefSeqs), maps, pathways, variations, phenotypes
 
 attributelink.Gramene.Gene.*.primaryIdentifier.url=http://tools.gramene.org/search?query=<<attributeValue>>&fq=species~Arabidopsis_thaliana
-attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics
+attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics in crops and model plant species
 attributelink.Gramene.Gene.*.primaryIdentifier.text=Gramene
 
 attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
@@ -90,11 +90,11 @@ attributelink.Phytozome.Gene.*.primaryIdentifier.title=comparative genomic among
 attributelink.Phytozome.Gene.*.primaryIdentifier.text=Phytozome
 
 attributelink.PIR.Gene.*.primaryIdentifier.url=http://pir.georgetown.edu/cgi-bin/textsearch.pl?query0=<<attributeValue>>&field0=GENENAME_TXT&search=1
-attributelink.PIR.Gene.*.primaryIdentifier.title=genomic, proteomic and systems biology
+attributelink.PIR.Gene.*.primaryIdentifier.title=Protein Information Resource with integrative protein informatics
 attributelink.PIR.Gene.*.primaryIdentifier.text=PIR
 
 attributelink.PPD.Gene.*.primaryIdentifier.url=http://ppdb.tc.cornell.edu/gene.aspx?acc=<<attributeValue>>
-attributelink.PPD.Gene.*.primaryIdentifier.title=curated information about protein function, protein properties and subcellular localization
+attributelink.PPD.Gene.*.primaryIdentifier.title=experimental data from in-house proteome and mass spectrometry analysis for Arabidopsis and Maize
 attributelink.PPD.Gene.*.primaryIdentifier.text=Plant Proteome Database
 
 attributelink.Plaza.Gene.*.primaryIdentifier.url=http://bioinformatics.psb.ugent.be/plaza/genes/view/<<attributeValue>>
@@ -102,7 +102,7 @@ attributelink.Plaza.Gene.*.primaryIdentifier.text=Plaza
 attributelink.Plaza.Gene.*.primaryIdentifier.title=plant comparative genomics
 
 attributelink.SUBA.Gene.*.primaryIdentifier.url=http://www.plantenergy.uwa.edu.au/applications/suba2/flatfile.php?id=<<attributeValue>>
-attributelink.SUBA.Gene.*.primaryIdentifier.title=large scale proteomic and GFP localization sets from cellular compartments
+attributelink.SUBA.Gene.*.primaryIdentifier.title=large scale proteomic and GFP localization sets from cellular compartments of Arabidopsis
 attributelink.SUBA.Gene.*.primaryIdentifier.text=SUBA
 
 #attributelink.Salk.Gene.*.primaryIdentifier.url=http://natural.salk.edu/cgi-bin/snp.cgi?QUERY=<<attributeValue>>
@@ -110,11 +110,11 @@ attributelink.SUBA.Gene.*.primaryIdentifier.text=SUBA
 #attributelink.Salk.Gene.*.primaryIdentifier.text=Salk SNP Viewer
 
 attributelink.TDNAe.Gene.*.primaryIdentifier.url=http://signal.salk.edu/cgi-bin/tdnaexpress?gene=<<attributeValue>>
-attributelink.TDNAe.Gene.*.primaryIdentifier.title=information of T-DNA lines, cDNA, EST clones, and more
+attributelink.TDNAe.Gene.*.primaryIdentifier.title=a graphical interface to T-DNA lines, cDNA, EST clones, and more
 attributelink.TDNAe.Gene.*.primaryIdentifier.text=T-DNA Express
 
 attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
-attributelink.TAIR.Gene.*.primaryIdentifier.title=genetic and molecular biology data
+attributelink.TAIR.Gene.*.primaryIdentifier.title=genetic and molecular biology data for Arabidopsis
 attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
 
 #attributelink.UniGene.Gene.*.primaryIdentifier.url=http://www.metalife.com/SearchSummary.aspx?query=<<attributeValue>>&db=UniGene
