changes about link to araport home (MINE-435)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -135,7 +135,7 @@ attributelink.quickgo.GOTerm.*.identifier.text=QuickGO:<<attributeValue>>
 header.links=help,faq,about,software
 header.links.help=https://www.araport.org/thalemine/user-guide
 header.links.faq=https://www.araport.org/thalemine/faq
-header.links.about=https://www.araport.org/thalemine
+header.links.about=https://www.araport.org
 header.links.software=https://github.com/Arabidopsis-Information-Portal/intermine
 
 # examples for the quicksearch
