MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Created initial version of Stock Metadata -  Araport Chado  Db bio sources.

https://jira.araport.org/browse/MINE-806

--- a/thalemine/dbmodel/project.properties
+++ b/thalemine/dbmodel/project.properties
@@ -7,6 +7,8 @@ core.model.path = bio/core
 extra.model.paths.start = thalemine/dbmodel/build/model/so_additions.xml bio/core/genomic_additions.xml \
    thalemine/dbmodel/resources/thalemine_additions.xml
 
+extra.model.paths.end = bio/sources/araport-chado-db/araport-chado-db_additions.xml bio/sources/araport-chado-db/araport-chado-db-stock_additions.xml
+
 so.termlist.file = resources/so_terms
 so.obo.file = ../../bio/sources/so/so.obo
 so.output.file = build/model/so_additions.xml
