MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Created Phenotype/Genotype Metadata Extension.

    https://jira.araport.org/browse/MINE-806

--- a/thalemine/dbmodel/project.properties
+++ b/thalemine/dbmodel/project.properties
@@ -9,7 +9,8 @@ extra.model.paths.start = thalemine/dbmodel/build/model/so_additions.xml bio/cor
 
 extra.model.paths.end = bio/sources/araport-chado-db/araport-chado-db_datalineage_additions.xml \
 bio/sources/araport-chado-db/araport-chado-db_provenance_additions.xml \
-bio/sources/araport-chado-db/araport-chado-db-stock_additions.xml
+bio/sources/araport-chado-db/araport-chado-db-stock_additions.xml \
+bio/sources/araport-chado-db/araport-chado-db-phenotype_genotype_additions.xml
 
 so.termlist.file = resources/so_terms
 so.obo.file = ../../bio/sources/so/so.obo
