MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Reviewed, updated araport chado db data model additions, and keys definitions.

 https://jira.araport.org/browse/MINE-806

--- a/thalemine/dbmodel/project.properties
+++ b/thalemine/dbmodel/project.properties
@@ -8,6 +8,7 @@ extra.model.paths.start = thalemine/dbmodel/build/model/so_additions.xml bio/cor
    thalemine/dbmodel/resources/thalemine_additions.xml
 
 extra.model.paths.end = bio/sources/araport-chado-db/araport-chado-db_datalineage_additions.xml \
+bio/sources/araport-chado-db/araport-chado-db_controlledvocabulary_additions.xml \
 bio/sources/araport-chado-db/araport-chado-db_provenance_additions.xml \
 bio/sources/araport-chado-db/araport-chado-db-stock_additions.xml \
 bio/sources/araport-chado-db/araport-chado-db-phenotype_genotype_additions.xml
