Added esyN displayer

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -366,6 +366,10 @@ Uniprot_url = http://www.uniprot.org
 # Gene Ontology Direct link
 GO_url = http://www.ebi.ac.uk/GOA
 
+# esyN Direct Link
+esyN_url = http://www.esyn.org
+
+
 # jwt/keystore configuration
 security.keystore.alias.wso2.org/products/am=araport
 jwt.verification.strategy=ANY
