MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Initial commit of the Stocks Loader Code

https://jira.araport.org/browse/MINE-806

--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -284,3 +284,10 @@ db.interpro.datasource.dataSourceName=db.interpro
 db.interpro.datasource.maxConnections=5
 db.interpro.driver=org.postgresql.Driver
 db.interpro.platform=PostgreSQL
+
+# Araport Chado database
+db.araport.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.araport.datasource.dataSourceName=db.araport
+db.araport.datasource.databaseName=araport
+db.araport.driver=org.postgresql.Driver
+db.araport.platform=PostgreSQL
