adds pathway (name) key, see MINE-821

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -26,6 +26,15 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.url=http://www.ebi.ac.uk/interpro/entry/<<attributeValue>>
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
+attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/www_bget?map<<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.title=KEGG
+attributelink.KEGG.Pathway.*.name.text=<<attributeValue>>
+
+attributelink.Reactome.Pathway.*.name.url=http://www.reactome.org/content/query?q=<<attributeValue>>&species=Arabidopsis+thaliana&cluster=true
+attributelink.Reactome.Pathway.*.name.title=Reactome
+attributelink.Reactome.Pathway.*.name.text=<<attributeValue>>
+
+
 attributelink.Ace.Gene.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/IEB/Research/Acembly/av.cgi?db=ara&term=<<attributeValue>>&submit=Go
 attributelink.Ace.Gene.*.primaryIdentifier.title=curated, comprehensive and non-redundant representation of all public mRNA sequences
 attributelink.Ace.Gene.*.primaryIdentifier.text=AceView
@@ -353,6 +362,7 @@ xreflink.HGNC.url=http://www.genenames.org/data/hgnc_data.php?hgnc_id=<<attribut
 xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 
 #inline.collections.in.tables = true
+#web.collections.expandonload=false
 
 # phytomine
 phytomine.homolog.prefix = https://api.araport.org/data/phytozome_intermine/v1.0.0
