now getting the protocol from the web.properties (MINE-853)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -307,8 +307,10 @@ genomicRegionSearch.exportChromosomeSegment = true
 
 # set CDN to araport
 head.cdn.location = https://cdn.araport.org
+#head.cdn.location = http://cdn.intermine.org
 
-head.cdn.location = https://cdn.araport.org
+# for code generation: set the protocol type
+protocol = https
 
 # load custom JS file
 head.js.all.MY_JS_OPTIONS = thalemine-options.js
@@ -378,7 +380,6 @@ GO_url = http://www.ebi.ac.uk/GOA
 
 # esyN Direct Link
 esyN_url = http://www.esyn.org
-
 
 # jwt/keystore configuration
 security.keystore.alias.wso2.org/products/am=araport
