corrects link to kegg (MINE-821)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -26,7 +26,7 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.url=http://www.ebi.ac.uk/interpro/entry/<<attributeValue>>
 attributelink.interpro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
 
-attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/www_bget?map<<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/kegg-bin/show_pathway?org_name=ath&mapno=<<attributeValue>>
 attributelink.KEGG.Pathway.*.identifier.title=KEGG
 attributelink.KEGG.Pathway.*.name.text=<<attributeValue>>
 
