MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance
1. Added publication display to the phenotypes.

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -366,6 +366,13 @@ Uniprot_url = http://www.uniprot.org
 # Gene Ontology Direct link
 GO_url = http://www.ebi.ac.uk/GOA
 
+#Polymorphism URLs
+TAIR_PolyAlleleSearch_url=https://www.arabidopsis.org/servlets/Search?action=new_search&type=polyallele
+
+#Stock Data Sources URLs
+ABRC_SeedStockSearch_url=https://www.arabidopsis.org/servlets/Search?action=new_search&type=germplasm
+NASC_StockSearch_url=http://arabidopsis.info/BrowsePage
+
 # jwt/keystore configuration
 security.keystore.alias.wso2.org/products/am=araport
 jwt.verification.strategy=ANY
