changes example gene list (MINE-925)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -175,7 +175,7 @@ or <strong>keywords</strong> for genes, proteins, ontology terms, authors, etc. 
 begin.searchBox.example = e.g. AT3G24650, FT, APL_ARATH
 
 # bag upload examples
-bag.example.identifiers=AT4G19020, AT5G39770, AT5G45400, AT3G44400, AT3G48090, AT5G41750
+bag.example.identifiers=AT1G02850, AT1G05240, AT1G05250, AT1G05260, AT1G14540, AT1G14550, AT1G15950, AT1G24110, AT1G24735, AT1G26560, AT1G30870, AT1G34510, AT1G44970, AT1G45191, AT1G48130, AT1G49570, AT1G51680, AT1G52760, AT1G61810, AT1G61820
 bag.example.identifiers.protein=A0MES8, B3H6J0_ARATH, AT1G02145, AAE14, AT4G00124.1, AT4G01515
 
 bag.example.identifiers.author="Chen HM", "Axtell MJ"
@@ -357,6 +357,7 @@ xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 
 #inline.collections.in.tables = true
 #web.collections.expandonload=false
+#use.localstorage = true
 
 # phytomine
 phytomine.homolog.prefix = https://api.araport.org/data/phytozome_intermine/v1.0.1
