--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -320,12 +320,12 @@ intermines.medicmine.defaultValues=M. truncatula
 intermines.medicmine.description=Medicago truncatula genome database
 
 intermines.phytomine.url=http://phytozome.jgi.doe.gov/phytomine
-intermines.phytomine.name=PhytoMine
-intermines.phytomine.logo=logo.png
-intermines.phytomine.bgcolor=#6E9E75
-intermines.phytomine.frontcolor=#FFF
-intermines.phytomine.defaultValues=A. thaliana,A. lyrata,B. rapa,G. max,M. truncatula,Z. mays
-intermines.phytomine.description=InterMine interface to data from Phytozome
+#intermines.phytomine.name=PhytoMine
+#intermines.phytomine.logo=logo.png
+#intermines.phytomine.bgcolor=#6E9E75
+#intermines.phytomine.frontcolor=#FFF
+#intermines.phytomine.defaultValues=A. thaliana,A. lyrata,B. rapa,G. max,M. truncatula,Z. mays
+#intermines.phytomine.description=InterMine interface to data from Phytozome
 
 # to redirect links
 webapp.linkRedirect=org.intermine.bio.web.BioLinkRedirectManager
