- Fix GO external link URL (MINE-935)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -369,7 +369,7 @@ Panther_url = http://pantherdb.org
 Uniprot_url = http://www.uniprot.org
 
 # Gene Ontology Direct link
-GO_url = http://www.ebi.ac.uk/GOA
+GO_url = http://geneontology.org
 
 # esyN Direct Link
 esyN_url = http://www.esyn.org
