MINE-806. Build Thalemine Phenotype Module Extension in local Thalemine instance 1. Updated filter url pattern.

--- a/thalemine/webapp/resources/webapp/WEB-INF/web.xml
+++ b/thalemine/webapp/resources/webapp/WEB-INF/web.xml
@@ -3171,7 +3171,7 @@ The different token types are:
   
   <filter-mapping> 
     <filter-name>contextInitializer</filter-name>
-    <url-pattern>/service/*</url-pattern> 
+    <url-pattern>/*</url-pattern> 
   </filter-mapping> 
   <!-- end Initializing Filter -->
 
