--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -391,7 +391,7 @@ mail.regarding.newly.shared.body = Dear %1$s user,\n\
 \n\
 One of our users (%2$s) has just shared one of their %3$s lists with you. The list contains\n\
 %4$d items, and is called "%5$s". Click on the link below to view this list in a browser:\n\
-     %6$s/%7$s/oauth2authenticator.do?provider=ARAPORT%%26returnto=%%2FbagDetails.do%%3FbagName%%3D%8$s\n\
+     %6$s/%7$s/oauth2authenticator.do?provider=ARAPORT&returnto=%%2FbagDetails.do%%3FbagName%%3D%8$s\n\
 \n\
 You cannot delete or modify this list directly, as it does not belong to you, although\n\
 you may remove it from your account by using the 'delete' function on the lists tab.\n\
