adds note for configuration

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -331,6 +331,9 @@ intermines.phytomine.url=http://phytozome.jgi.doe.gov/phytomine
 webapp.linkRedirect=org.intermine.bio.web.BioLinkRedirectManager
 externallink.ECNumber.ECNumber.*.identifier.url=http://www.ebi.ac.uk/thornton-srv/databases/cgi-bin/enzymes/GetPage.pl?ec_number=<<attributeValue>>
 
+# the <<attribute>> is appended by default, so the following does not work:
+#externallink.GOEvidenceCode.GOEvidenceCode.*.code.url=http://geneontology.org/page/guide-go-evidence-codes
+
 #externallink.UniProtFeature.UniProtFeature.*.type.url=http://www.uniprot.org/help/<<attributeValue>>
 
 # CrossReferencelink
