adds external link for plant ontology

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -134,6 +134,9 @@ attributelink.amigo.GOTerm.*.identifier.text=AmiGO:<<attributeValue>>
 attributelink.quickgo.GOTerm.*.identifier.url=http://www.ebi.ac.uk/QuickGO/GTerm?id=<<attributeValue>>
 attributelink.quickgo.GOTerm.*.identifier.text=QuickGO:<<attributeValue>>
 
+attributelink.amigo.POTerm.*.identifier.url=http://www.plantontology.org/amigo/go.cgi?view=details&search_constraint=terms&depth=0&query=<<attributeValue>>
+attributelink.amigo.POTerm.*.identifier.text=<<attributeValue>>
+
 
 # Header - these will populate the top right navigation
 header.links=help,faq,about,software
@@ -373,6 +376,9 @@ Uniprot_url = http://www.uniprot.org
 
 # Gene Ontology Direct link
 GO_url = http://geneontology.org
+
+# Plant Ontology Direct link
+PO_url = http://www.plantontology.org
 
 # esyN Direct Link
 esyN_url = http://www.esyn.org
