[WSD-1028] added atted.url.prefix and araport.accessToken to thalemine's web.properties file modified report.jsp to handle the new options of the atted-displayer

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -395,6 +395,10 @@ security.keystore.alias.wso2.org/products/am=araport
 jwt.verification.strategy=ANY
 authentication.identity.assertion.header=X-Jwt-Assertion-Araport-Org
 
+# ATTED configuration
+atted.url.prefix=https://api.araport.org/community/v0.3/atted/atted_coex_v1.0/access
+araport.accessToken=9eec20cc702cffc9d0d26dc2ec0af1
+
 # list sharing email template
 mail.regarding.newly.shared.body = Dear %1$s user,\n\
 \n\
