now TAIR is data source (relates to MINE_969)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -380,6 +380,9 @@ GO_url = http://geneontology.org
 # Plant Ontology Direct link
 PO_url = http://www.plantontology.org
 
+# TAIR Direct link
+TAIR_url = https://www.arabidopsis.org
+
 # esyN Direct Link
 esyN_url = http://www.esyn.org
 
