--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -139,10 +139,10 @@ attributelink.amigo.POTerm.*.identifier.text=<<attributeValue>>
 
 
 # Header - these will populate the top right navigation
-header.links=help,faq,about,software
+header.links=help,faq,software,ARAPORT
 header.links.help=https://www.araport.org/thalemine/user-guide
 header.links.faq=https://www.araport.org/thalemine/faq
-header.links.about=https://www.araport.org
+header.links.ARAPORT=https://www.araport.org
 header.links.software=https://github.com/Arabidopsis-Information-Portal/intermine
 
 # examples for the quicksearch
@@ -152,7 +152,7 @@ meta.keywords = microarray, bioinformatics, arabidopsis, genomics
 meta.description = Integrated queryable database for Arabidopsis
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
-theme = grey
+theme = araport
 
 # galaxy
 ## set to "false" to disable galaxy
@@ -232,7 +232,7 @@ begin.thirdBox.visitedTitle = Welcome Back!
 begin.thirdBox.description = <strong>ThaleMine</strong> enables you to analyze <b>gene</b> and <b>protein</b> data from TAIR, \
 <b>expression</b> and <b>interaction</b> data from BAR, <b>ortholog</b> data from Panther, and more. \
 <br>Use plain text or structured queries for interactive gene and protein reports.</br>\
-Part of <a href="https://www.araport.org/"><strong>Araport</strong></a>, the new Arabidopsis Information Portal.
+Part of <a href="https://www.araport.org/"><strong>ARAPORT</strong></a>, the Arabidopsis Information Portal.
 
 #ThaleMine integrates many types of data for <em>Arabidopsis</em> \
 #<em>thaliana</em>. You can run flexible queries, export results and analyse lists of \
@@ -244,6 +244,7 @@ begin.thirdBox.linkTitle = Take a tour
 project.sitePrefix=/thalemine
 project.siteHome=https://www.araport.org
 project.siteLogo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd.png
+#project.siteLogo=https://www.araport.org/sites/all/themes/custom/araport-theme/logo.png
 project.helpLocation=https://www.araport.org/thalemine/user-guide
 
 tair.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Genome+Annotation">TAIR</a>, Mar 31, 2014.
