--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -249,7 +249,7 @@ intermines.mousemine.description=Mine for MGI
 
 intermines.thalemine.url=https://apps.araport.org/thalemine
 intermines.thalemine.name=ThaleMine
-intermines.thalemine.logo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd
+#intermines.thalemine.logo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd
 intermines.thalemine.bgcolor=#575757
 intermines.thalemine.frontcolor=#FFF
 intermines.thalemine.defaultValues=A. thaliana
