+ Fix locus history keys properties

--- a/thalemine/integrate/resources/araport-locus-history_keys.properties
+++ b/thalemine/integrate/resources/araport-locus-history_keys.properties
@@ -1,1 +1,1 @@
-LocusHistory.key_source_operation_date = source, operation, datestamp
+LocusHistory.key_source_operation_date = source, locusOperation, datestamp
