+ [MINE-1020] Set dataSummary.page title + Set struts action forward mapping from /dataCategories to dataSummary.page

--- a/thalemine/webapp/resources/model.properties
+++ b/thalemine/webapp/resources/model.properties
@@ -12,3 +12,6 @@ exporter.bed.description=Export in BED format
 
 # createAccount.systemMessage
 createAccount.systemMessage = Sorry, but it is currently necessary to maintain a separate user account for the ThaleMine application in addition to the Araport web site. You are welcome to use the same username and password for both. We apologize for this temporary inconvenience.
+
+# data summary page
+dataSummary.title = Data Sources
