--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -247,7 +247,8 @@ project.siteLogo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd.
 #project.siteLogo=https://www.araport.org/sites/all/themes/custom/araport-theme/logo.png
 project.helpLocation=https://www.araport.org/thalemine/user-guide
 
-tair.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Genome+Annotation">TAIR</a>, Mar 31, 2014.
+araport.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Genome+Annotation">Araport11</a> Pre-release 2 (10/2015) .
+tair.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Gene+Summary">TAIR</a>, Sep 30, 2014.
 
 
 
