+ Fix text in "Welcome Back" box on ThaleMine front page + Fix paths to TAIR/Araport dataset attribution, make URLs relative + Remove intro.text for all Aspects from aspects.xml

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -229,10 +229,10 @@ begin.listBox.description = Enter a <strong>list</strong> of identifiers.
 # third box
 begin.thirdBox.title = First Time Here?
 begin.thirdBox.visitedTitle = Welcome Back!
-begin.thirdBox.description = <strong>ThaleMine</strong> enables you to analyze <b>gene</b> and <b>protein</b> data from TAIR, \
-<b>expression</b> and <b>interaction</b> data from BAR, <b>ortholog</b> data from Panther, and more. \
-<br>Use plain text or structured queries for interactive gene and protein reports.</br>\
-Part of <a href="https://www.araport.org/"><strong>ARAPORT</strong></a>, the Arabidopsis Information Portal.
+begin.thirdBox.description = <strong>ThaleMine</strong> enables you to analyze <i>Arabidopsis thaliana</i> <b>genes</b>, \
+<b>proteins</b>, <b>gene expression</b>, <b>protein-protein interactions</b>, <b>orthologs</b>, and more. \
+<br>Use plain text or structured queries for interactive gene and protein reports. \
+<br>Part of <a href="https://www.araport.org/"><strong>ARAPORT</strong></a>, the Arabidopsis Information Portal.
 
 #ThaleMine integrates many types of data for <em>Arabidopsis</em> \
 #<em>thaliana</em>. You can run flexible queries, export results and analyse lists of \
@@ -247,8 +247,8 @@ project.siteLogo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd.
 #project.siteLogo=https://www.araport.org/sites/all/themes/custom/araport-theme/logo.png
 project.helpLocation=https://www.araport.org/thalemine/user-guide
 
-araport.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Genome+Annotation">Araport11</a> Pre-release 2 (10/2015) .
-tair.attribution=<strong><i>Source:&nbsp;</strong></i><a target="_blank" href="http://apps.araport.org/thalemine/portal.do?class=DataSet&externalids=Gene+Summary">TAIR</a>, Sep 30, 2014.
+araport.attribution=<strong><i>Source:&nbsp;</i></strong><a target="_blank" href="portal.do?class=DataSet&externalids=Genome+Annotation">Araport11</a> Pre-release 2 (10/2015) .
+tair.attribution=<strong><i>Source:&nbsp;</i></strong><a target="_blank" href="portal.do?class=DataSet&externalids=Gene+Summary">TAIR</a>, Sep 30, 2014.
 
 
 
