+ Revert aspects.xml to previous state from commit 66671835 + Remove text from front page tabs by adjusting web.properties instead

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -254,18 +254,15 @@ tair.attribution=<strong><i>Source:&nbsp;</i></strong><a target="_blank" href="p
 
 # popular templates in tabs, template category (key identifier)
 begin.tabs.1.id = Genes and Proteins
-begin.tabs.1.description = The gene models and other genome annotation in ThaleMine are provided by a variety \
-of source databases including:  TAIR, UniProt, Ensembl and other data sources.
+begin.tabs.1.description =
 begin.tabs.2.id = Homology
-begin.tabs.2.description = ThaleMine loads homologues from PANTHER.
+begin.tabs.2.description =
 begin.tabs.3.id = Function
-begin.tabs.3.description = ThaleMine loads Gene Ontology annotation from GO, UniProt, \
-InterPro; domain data from InterPro.
+begin.tabs.3.description =
 begin.tabs.4.id = Expression
-begin.tabs.4.description = ThaleMine loads gene expression data from AtGenExpress and \
-Bio-Analytic Resource (BAR)
+begin.tabs.4.description =
 begin.tabs.5.id = Interactions
-begin.tabs.5.description = ThaleMine loads physical interactions from the Bio-Analytic Resource (BAR).
+begin.tabs.5.description =
 
 begin.listsBox.description = You can run queries on whole lists of data. Create lists from the results of a query \
 or by uploading identifiers. Click on a list to view graphs and summaries in a list analysis page, if you log in \
