--- a/thalemine/dbmodel/resources/objectstoresummary.config.properties
+++ b/thalemine/dbmodel/resources/objectstoresummary.config.properties
@@ -3,7 +3,7 @@ max.field.values = 200
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
 
-org.intermine.model.bio.Chromosome.autocomplete = primaryIdentifier
+#org.intermine.model.bio.Chromosome.autocomplete = primaryIdentifier
 org.intermine.model.bio.GOTerm.autocomplete = name
 org.intermine.model.bio.Interaction.fields = role interactionType
 org.intermine.model.bio.InteractionRegion.fields = startStatus endStatus
