--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -286,8 +286,8 @@ db.interpro.driver=org.postgresql.Driver
 db.interpro.platform=PostgreSQL
 
 # Araport Chado database
-db.araport.datasource.class=org.postgresql.ds.PGPoolingDataSource
+db.araport.datasource.class=org.postgresql.ds.PGSimpleDataSource
 db.araport.datasource.dataSourceName=db.araport
-db.araport.datasource.databaseName=araport
+db.araport.datasource.databaseName=araportdev
 db.araport.driver=org.postgresql.Driver
 db.araport.platform=PostgreSQL
