MINE-988 Stock/Genotype Collection Debug

--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -287,6 +287,7 @@ db.interpro.platform=PostgreSQL
 
 # Araport Chado database
 db.araport.datasource.class=com.zaxxer.hikari.HikariDataSource
+db.araport.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.araport.datasource.dataSourceName=db.araport
 db.araport.datasource.maxConnections=5
 db.araport.datasource.databaseName=araportdev
