--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -290,6 +290,7 @@ db.araport.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.araport.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.araport.datasource.dataSourceName=db.araport
 db.araport.datasource.maxConnections=5
+db.araport.datasource.timeout=50000000
 db.araport.datasource.databaseName=araportdev
 db.araport.driver=org.postgresql.Driver
 db.araport.platform=PostgreSQL
