--- a/thalemine/default.intermine.integrate.properties
+++ b/thalemine/default.intermine.integrate.properties
@@ -21,6 +21,7 @@ db.production.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.production.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.production.datasource.dataSourceName=db.production
 db.production.datasource.maxConnections=20
+db.production.datasource.connectionTimeout=50000000
 db.production.driver=org.postgresql.Driver
 db.production.platform=PostgreSQL
 
@@ -47,6 +48,7 @@ db.common-tgt-items.datasource.class=com.zaxxer.hikari.HikariDataSource
 db.common-tgt-items.datasource.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.common-tgt-items.datasource.dataSourceName=db.common-tgt-items
 db.common-tgt-items.datasource.maxConnections=5
+db.common-tgt-items.datasource.connectionTimeout=50000000
 db.common-tgt-items.driver=org.postgresql.Driver
 db.common-tgt-items.platform=PostgreSQL
 
