--- a/thalemine/webapp/resources/webapp/log4j.properties
+++ b/thalemine/webapp/resources/webapp/log4j.properties
@@ -3,7 +3,7 @@
 ###############
 
 #logger ROOT
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=DEBUG, A1, stdout
 
 #################
 ### APPENDERs ###
@@ -13,6 +13,7 @@ log4j.rootLogger=INFO, A1
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %25F:%L %5p - %m%n
+log4j.appender.stdout.Threshold=DEBUG
 
 #appender A1
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
@@ -21,3 +22,6 @@ log4j.appender.A1.MaxFileSize=25MB
 log4j.appender.A1.MaxBackupIndex=40
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{dd/MM/yyyy,HH:mm:ss} %-5p %37c %3x - %m%n
+log4j.appender.A1.Threshold=DEBUG
+
+log4j.logger.org.thalemine.web=INFO, DEBUG, ERROR, A1, stdout
