Adding ignore fields for os summary

--- a/thalemine/dbmodel/resources/objectstoresummary.config.properties
+++ b/thalemine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,5 +1,7 @@
 max.field.values = 200
 
+ignore.counts=org.intermine.model.bio.Expression.pValue        org.intermine.model.bio.Pseudogene.secondaryIdentifier  org.intermine.model.bio.Pseudogene.computationalDescription     org.intermine.model.bio.Pseudogene.primaryIdentifier    org.intermine.model.bio.PseudogenicExon.length  org.intermine.model.bio.Allele.description      org.intermine.model.bio.Allele.secondaryIdentifier      org.intermine.model.bio.Allele.primaryIdentifier        org.intermine.model.bio.Allele.name     org.intermine.model.bio.Intron.length   org.intermine.model.bio.Location.end    org.intermine.model.bio.Location.start
+
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
 
