corrects order for p2p

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -81,9 +81,9 @@ attributelink.Gramene.Gene.*.primaryIdentifier.url=http://tools.gramene.org/sear
 attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics in crops and model plant species
 attributelink.Gramene.Gene.*.primaryIdentifier.text=Gramene
 
-attributelink.pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
-attributelink.pep2pro.Gene.*.primaryIdentifier.title=proteome information from large datasets
-attributelink.pep2pro.Gene.*.primaryIdentifier.text=pep2pro
+attributelink.Pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
+attributelink.Pep2pro.Gene.*.primaryIdentifier.title=proteome information from large datasets
+attributelink.Pep2pro.Gene.*.primaryIdentifier.text=pep2pro
 
 attributelink.PGDD.Gene.*.primaryIdentifier.url=http://chibba.agtec.uga.edu/duplication/index/locus_app?lc=<<attributeValue>>
 attributelink.PGDD.Gene.*.primaryIdentifier.title=database to identify and catalog plant genes in terms of intragenome or cross-genome syntenic relationships
@@ -120,6 +120,7 @@ attributelink.TDNAe.Gene.*.primaryIdentifier.text=T-DNA Express
 attributelink.TAIR.Gene.*.primaryIdentifier.url=http://www.arabidopsis.org/servlets/TairObject?name=<<attributeValue>>&type=locus
 attributelink.TAIR.Gene.*.primaryIdentifier.title=genetic and molecular biology data for Arabidopsis
 attributelink.TAIR.Gene.*.primaryIdentifier.text=TAIR
+
 
 #attributelink.UniGene.Gene.*.primaryIdentifier.url=http://www.metalife.com/SearchSummary.aspx?query=<<attributeValue>>&db=UniGene
 #attributelink.UniGene.Gene.*.primaryIdentifier.text=metalife
@@ -308,6 +309,7 @@ genomicRegionSearch.exportChromosomeSegment = true
 # set CDN to araport
 head.cdn.location = https://cdn.araport.org
 #head.cdn.location = http://cdn.intermine.org
+#head.cdn.location = http://cdn-dev.intermine.org
 
 # load custom JS file
 head.js.all.MY_JS_OPTIONS = thalemine-options.js
