adds Stocks tab on front page

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -269,8 +269,10 @@ begin.tabs.3.id = Function
 begin.tabs.3.description =
 begin.tabs.4.id = Expression
 begin.tabs.4.description =
-begin.tabs.5.id = Interactions
+begin.tabs.5.id = Stocks
 begin.tabs.5.description =
+begin.tabs.6.id = Interactions
+begin.tabs.6.description =
 
 begin.listsBox.description = You can run queries on whole lists of data. Create lists from the results of a query \
 or by uploading identifiers. Click on a list to view graphs and summaries in a list analysis page, if you log in \
