+ Add external link to GeneVisible page (MINE-1149)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -81,6 +81,10 @@ attributelink.Gramene.Gene.*.primaryIdentifier.url=http://tools.gramene.org/sear
 attributelink.Gramene.Gene.*.primaryIdentifier.title=curated and integrated data resource for comparative functional genomics in crops and model plant species
 attributelink.Gramene.Gene.*.primaryIdentifier.text=Gramene
 
+attributelink.GeneVisible.Gene.*.primaryIdentifier.url=http://genevisible.com/tissues/AT/select/<<attributeValue>>
+attributelink.GeneVisible.Gene.*.primaryIdentifier.title=view top ten tissues or perturbations for your gene of interest
+attributelink.GeneVisible.Gene.*.primaryIdentifier.text=GeneVisible
+
 attributelink.Pep2pro.Gene.*.primaryIdentifier.url=http://fgcz-pep2pro.uzh.ch/locus.php?<<attributeValue>>
 attributelink.Pep2pro.Gene.*.primaryIdentifier.title=proteome information from large datasets
 attributelink.Pep2pro.Gene.*.primaryIdentifier.text=pep2pro
