+ Add external link to Agrisera (MINE-1150)

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -58,6 +58,10 @@ attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.o
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.title=microarray data for samples at various development stage or stresses
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 
+attributelink.GeneVisible.Gene.*.primaryIdentifier.url=http://www.agrisera.com/<<attributeValue>>
+attributelink.GeneVisible.Gene.*.primaryIdentifier.title=order antibodies with confirmed or predicted reactivity to Arabidopsis thaliana
+attributelink.GeneVisible.Gene.*.primaryIdentifier.text=Agrisera Antibodies
+
 attributelink.ATTED.Gene.*.primaryIdentifier.url=http://atted.jp/data/locus/<<attributeValue>>.shtml
 attributelink.ATTED.Gene.*.primaryIdentifier.title=gene coexpression database based on microarray and coexpressed gene network
 attributelink.ATTED.Gene.*.primaryIdentifier.text=ATTED-II
