+ Fix Phytozome homolog stripe, use ADAMA passthrough [MINE-1152] + Set up conditional link out to MedicMine from Phytozome homolog stripe + Fix Agrisera linkout [MINE-1150]

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -58,9 +58,9 @@ attributelink.AtGenExpress.Gene.*.primaryIdentifier.url=http://jsp.weigelworld.o
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.title=microarray data for samples at various development stage or stresses
 attributelink.AtGenExpress.Gene.*.primaryIdentifier.text=AtGenExpress
 
-attributelink.GeneVisible.Gene.*.primaryIdentifier.url=http://www.agrisera.com/<<attributeValue>>
-attributelink.GeneVisible.Gene.*.primaryIdentifier.title=order antibodies with confirmed or predicted reactivity to Arabidopsis thaliana
-attributelink.GeneVisible.Gene.*.primaryIdentifier.text=Agrisera Antibodies
+attributelink.AgriSera.Gene.*.primaryIdentifier.url=http://www.agrisera.com/<<attributeValue>>
+attributelink.AgriSera.Gene.*.primaryIdentifier.title=order antibodies with confirmed or predicted reactivity to Arabidopsis thaliana
+attributelink.AgriSera.Gene.*.primaryIdentifier.text=Agrisera Antibodies
 
 attributelink.ATTED.Gene.*.primaryIdentifier.url=http://atted.jp/data/locus/<<attributeValue>>.shtml
 attributelink.ATTED.Gene.*.primaryIdentifier.title=gene coexpression database based on microarray and coexpressed gene network
@@ -97,7 +97,7 @@ attributelink.PGDD.Gene.*.primaryIdentifier.url=http://chibba.agtec.uga.edu/dupl
 attributelink.PGDD.Gene.*.primaryIdentifier.title=database to identify and catalog plant genes in terms of intragenome or cross-genome syntenic relationships
 attributelink.PGDD.Gene.*.primaryIdentifier.text=PGDD
 
-attributelink.Phytozome.Gene.*.primaryIdentifier.url=http://phytozome.jgi.doe.gov/pz/portal.html#!gene?organism=Athaliana&searchText=locusName:<<attributeValue>>
+attributelink.Phytozome.Gene.*.primaryIdentifier.url=https://phytozome.jgi.doe.gov/pz/portal.html#!gene?organism=Athaliana&searchText=locusName:<<attributeValue>>
 attributelink.Phytozome.Gene.*.primaryIdentifier.title=comparative genomic amongst green plants
 attributelink.Phytozome.Gene.*.primaryIdentifier.text=Phytozome
 
@@ -340,7 +340,7 @@ intermines.medicmine.frontcolor=#FFF
 intermines.medicmine.defaultValues=M. truncatula
 intermines.medicmine.description=Medicago truncatula genome database
 
-intermines.phytomine.url=http://phytozome.jgi.doe.gov/phytomine
+intermines.phytomine.url=https://phytozome.jgi.doe.gov/phytomine
 #intermines.phytomine.name=PhytoMine
 #intermines.phytomine.logo=logo.png
 #intermines.phytomine.bgcolor=#6E9E75
@@ -384,7 +384,7 @@ xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 #use.localstorage = true
 
 # phytomine
-phytomine.homolog.prefix = https://api.araport.org/data/phytozome_intermine/v1.0.1
+phytomine.homolog.prefix = https://api.araport.org/community/v0.3/phytozome/phytomine_v0.2/access
 
 #Panther Direct Link
 Panther_url = http://pantherdb.org
