TOREVERT: moves the CDN to intermine dev for testing

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -323,9 +323,9 @@ genomicRegionSearch.liftOver.url =
 genomicRegionSearch.exportChromosomeSegment = true
 
 # set CDN to araport
-head.cdn.location = https://cdn.araport.org
+#head.cdn.location = https://cdn.araport.org
 #head.cdn.location = http://cdn.intermine.org
-#head.cdn.location = http://cdn-dev.intermine.org
+head.cdn.location = http://cdn-dev.intermine.org
 
 # load custom JS file
 head.js.all.MY_JS_OPTIONS = thalemine-options.js
