--- a/imbuild/im-ant-tasks/.classpath
+++ b/imbuild/im-ant-tasks/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/xalan.jar"/>
 	<classpathentry kind="lib" path="lib/ant-1.6.5.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/imbuild"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/testmodel"/>
+	<classpathentry kind="lib" path="/local-homes/sergio/git/i2/imbuild/im-ant-tasks/lib/catalina-ant.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
