--- a/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     <listener-class>org.intermine.web.logic.session.SessionListener</listener-class>
   </listener>
 
+  <listener>
+    <listener-class>org.thalemine.web.context.AppContextListener</listener-class>
+  </listener>
+
 <!-- Main webapp mapping -->
 <!-- ================================================================================ -->
   <servlet>
@@ -3161,6 +3165,17 @@ The different token types are:
 
   </filter-mapping>
 
+  <!-- Initializing Filter -->
+  <filter>
+    <filter-name>contextInitializer</filter-name>
+    <filter-class>org.thalemine.web.context.ContextLoaderInitializer</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>contextInitializer</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <!-- end Initializing Filter -->
 
   <error-page>
     <error-code>500</error-code>
