--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -383,6 +383,9 @@ xreflink.BioGRID.url=http://thebiogrid.org/<<attributeValue>>
 #web.collections.expandonload=false
 #use.localstorage = true
 
+# BAR eFP browser displayer
+bar.eFPBrowser.prefix = https://api.araport.org/community/v0.3/aip/efp_by_locus_v0.2.0/search
+
 # phytomine
 phytomine.homolog.prefix = https://api.araport.org/community/v0.3/phytozome/phytomine_v0.2/access
 
