+ Update Araport anonymous accessToken for ThaleMine [WSD-518]

--- a/thalemine/webapp/resources/web.properties
+++ b/thalemine/webapp/resources/web.properties
@@ -421,7 +421,9 @@ authentication.identity.assertion.header=X-Jwt-Assertion-Araport-Org
 
 # ATTED configuration
 atted.url.prefix=https://api.araport.org/community/v0.3/atted/atted_coex_v1.1/access
-araport.accessToken=9eec20cc702cffc9d0d26dc2ec0af1
+
+# Araport anonymous user accessToken
+araport.accessToken=5560c37c792ccffa231b855c43d57ea
 
 # list sharing email template
 mail.regarding.newly.shared.body = Dear %1$s user,\n\
