--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -193,7 +193,7 @@ help.page.aspect=dataCategory
 # NOTE: name has to match the `project.title` in your properties file
 
 intermines.modmine.url=http://intermine.modencode.org/query
-intermines.modmine.name=modMine
+#intermines.modmine.name=modMine
 intermines.modmine.logo=modminelogo.png
 intermines.modmine.bgcolor=#396A81
 intermines.modmine.frontcolor=#FFF
@@ -201,7 +201,7 @@ intermines.modmine.defaultValues=D. melanogaster,C. elegans
 intermines.modmine.description=Mine for the modENCODE project
 
 intermines.flymine.url=http://www.flymine.org/query
-intermines.flymine.name=FlyMine
+#intermines.flymine.name=FlyMine
 intermines.flymine.logo=flymine_logo_link.gif
 intermines.flymine.bgcolor=#5C0075
 intermines.flymine.frontcolor=#FFF
@@ -217,7 +217,7 @@ intermines.flymine.description=Mine with D. melanogaster data
 #intermines.ratmine.description=Mine for the Rat Genome Database (RGD)
 
 intermines.yeastmine.url=http://yeastmine.yeastgenome.org/yeastmine
-intermines.yeastmine.name=YeastMine
+#intermines.yeastmine.name=YeastMine
 intermines.yeastmine.logo=SGD_logo_small.png
 intermines.yeastmine.bgcolor=#A7995E
 intermines.yeastmine.frontcolor=#FFF
@@ -233,7 +233,7 @@ intermines.yeastmine.description=Mine for the Saccharomyces Genome Database (SGD
 #intermines.zfinmine.description=Mine for ZFIN
 
 intermines.humanmine.url=http://www.humanmine.org/humanmine
-intermines.humanmine.name=HumanMine
+#intermines.humanmine.name=HumanMine
 intermines.humanmine.logo=humanmine_logo.png
 intermines.humanmine.bgcolor=#C3C3C3
 intermines.humanmine.frontcolor=#000
@@ -241,7 +241,7 @@ intermines.humanmine.defaultValues=H. sapiens
 intermines.humanmine.description=Mine for metabolic disease related data in human and mouse
 
 intermines.mousemine.url=http://www.mousemine.org/mousemine
-intermines.mousemine.name=MouseMine
+#intermines.mousemine.name=MouseMine
 intermines.mousemine.logo=mousemine_small_logo.png
 intermines.mousemine.bgcolor=#192F39
 intermines.mousemine.frontcolor=#FFF
@@ -259,7 +259,7 @@ intermines.mousemine.description=Mine for MGI
 
 intermines.thalemine.url=https://apps.araport.org/thalemine
 intermines.thalemine.name=ThaleMine
-#intermines.thalemine.logo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd
+intermines.thalemine.logo=https://s.gravatar.com/avatar/978e836a9d65238a784543ad932637cd
 intermines.thalemine.bgcolor=#575757
 intermines.thalemine.frontcolor=#FFF
 intermines.thalemine.defaultValues=A. thaliana
