first small customizations

--- a/rumenmine/webapp/resources/web.properties
+++ b/rumenmine/webapp/resources/web.properties
@@ -34,11 +34,11 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 # examples for the quicksearch
 quickSearch.identifiers = e.g zen, Q9V4E1
 
-meta.keywords = microarray, bioinformatics, drosophila, genomics
-meta.description = Integrated queryable database for Drosophila and Anopheles genomics
+meta.keywords = bioinformatics, rumen, metagenomics
+meta.description = Integrated queryable database for the rumen metagenomics
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
-theme = grey
+theme = metabolic
 
 # galaxy
 ## set to "false" to disable galaxy
